seperaing roles